--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-loader-spinner": "^8.0.0",
     "reactflow": "^11.11.4"
   },
   "devDependencies": {
