--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "dockerode": "^4.0.9",
     "lucide-react": "^0.545.0",
     "next": "15.5.2",
     "react": "19.1.0",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.13",
+    "@types/dockerode": "^3.3.45",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
