--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "dockerode": "^4.0.9",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-loader-spinner": "^8.0.0",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "recharts": "^3.4.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
